[gd_scene load_steps=3 format=3 uid="uid://byeivh78bedu0"]

[ext_resource type="PackedScene" uid="uid://dwmmrcdl0y5n5" path="res://scene/ui/base_model/panel_model.tscn" id="1_3ddy1"]
[ext_resource type="Script" uid="uid://b5hcudv6gyam6" path="res://scene/ui/default_model/panel/add_quest_group_panel.gd" id="2_7ygrc"]

[node name="AddQuestGroupPanel" instance=ExtResource("1_3ddy1")]
script = ExtResource("2_7ygrc")

[node name="TitleLabel" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]
text = "添加任务组"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="QuestGroupNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "请输入任务组名字"

[node name="QuestGroupDescTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
placeholder_text = "请输入任务组介绍"

[node name="CreateQuestGroupButton" type="Button" parent="MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "创建"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/QuestGroupNameLineEdit" to="." method="_on_quest_group_name_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateQuestGroupButton" to="." method="_on_create_quest_group_button_pressed"]
